# taskdn

./: .coderabbit.yaml  .gitignore  ARCHITECTURE-RESEARCH.md  CLAUDE.md  README.md  package.json
.github/workflows/: ci.yml  publish-ts-package.yml  rust.yml
archived-projects/taskdn-rust/: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  justfile
archived-projects/taskdn-ts/: Cargo.toml  README.md  index.d.ts  index.js
archived-projects/workflows/: publish-ts-package.yml
demo-vault/: README.md  obsidian-dashboard.md
demo-vault/.obsidian/: workspace.json
demo-vault/areas/: acme-corp.md  coding.md  dating.md  finance.md  finances.md  fitness-health-self-care.md  health.md  home.md  house-family-friends.md  learning.md  marketing-and-sales.md  old-client-inc.md  side-projects.md  techstart.md  travel.md  writing.md
demo-vault/projects/: acme-dashboard-redesign.md  api-migration-techstart.md  blog-relaunch.md  content-calendar-q1.md  fitness-challenge.md  garden-renovation.md  half-marathon-training.md  holiday-party-2024.md  home-office-setup.md  investment-portfolio-review.md  japan-trip-2025.md  learn-rust-project.md  mobile-app-techstart.md  newsletter-setup.md  open-source-cli-tool.md  open-source-lib.md  personal-website-rebuild.md  q1-planning-acme.md  q1-tax-preparation.md  side-hustle-app.md  tax-filing-2024.md  tech-blog-relaunch.md  website-redesign-acme.md
demo-vault/tasks/: attend-networking-event.md  book-dentist.md  (+70 more)
docs/: README.md  overview.md  roadmap-and-approach.md  tasks.md
scripts/: install-local.sh  reset-dummy-vault.sh
taskdn-claude-code-skill/: README.md
taskdn-cli/: README.md
taskdn-obsidian-plugin/: README.md
taskdn-rust/: CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
taskdn-rust/benches/: benchmarks.rs
taskdn-rust/docs/: README.md  tasks.md
taskdn-rust/docs/developer/: architecture-guide.md  phase2-doc-copy.md
taskdn-rust/docs/tasks-done/: 2025-12-12-task-core-types.md  2025-12-12-task-file-watching.md  2025-12-12-task-project-setup.md  2025-12-12-task-reference-resolution.md  2025-12-12-task-sdk-api.md  2025-12-12-task-writer.md
taskdn-rust/docs/tasks-todo/: task-10-polish.md  task-11-publish.md  task-2-api-design.md  task-3-core-types.md  task-4-parser.md  task-5-entities.md  task-6-writer.md  task-7-reference-resolution.md  task-8-sdk-api.md  task-9-file-watching.md
taskdn-rust/src/: area.rs  config.rs  error.rs  events.rs  filter.rs  lib.rs  parser.rs  project.rs  reference.rs  resolve.rs  task.rs  utils.rs  validation.rs  watcher.rs  writer.rs
taskdn-rust/src/operations/: areas.rs  projects.rs  tasks.rs  validation.rs
taskdn-rust/src/types/: datetime.rs  mod.rs  reference.rs  task.rs
taskdn-rust/tests/: integration_test.rs
taskdn-ts/: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json
taskdn-ts/docs/tasks-done/: 2025-12-14-task-npm-publishing.md  task-2025-12-14-api-consistency.md  task-2025-12-14-cleanup-documentation.md  task-2025-12-14-core-types.md  task-2025-12-14-integration-tests.md  task-2025-12-14-project-area-operations.md
taskdn-ts/docs/tasks-todo/: task-3-task-operations.md  task-6-integration-tests.md  task-7-cleanup-documentation.md  task-8-npm-publishing.md
taskdn-ts/npm/darwin-arm64/: README.md  package.json
taskdn-ts/npm/darwin-x64/: README.md  package.json
taskdn-ts/npm/linux-x64-gnu/: README.md  package.json
taskdn-ts/npm/win32-x64-msvc/: README.md  package.json
taskdn-ts/src/: lib.rs
taskdn-ts/tests/: setup.ts  taskdn.test.ts  tasks.test.ts
taskdn-ts/tests/__snapshots__/: api-snapshot.test.ts.snap
taskdn-website/: README.md
tdn-cli/: .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  README.md  eslint.config.js  package.json  prettier.config.js  tsconfig.json
tdn-cli/crates/core/: Cargo.toml
tdn-cli/crates/core/src/: area.rs  error.rs  lib.rs  project.rs  query_results.rs  task.rs  test_utils.rs  vault.rs  vault_index.rs  vault_session.rs  wikilink.rs  writer.rs
tdn-desktop/: README.md
tdn-specs/: README.md  S1-core.md  S2-implementation-requirements.md  S2-interface-design.md  S3-data-read-write.md
(+279 files in other folders)
