[package]
name = "taskdn"
version = "0.1.0"
edition = "2021"
description = "Rust library for parsing, querying, and manipulating Taskdn task files"
license = "MIT"
repository = "https://github.com/dannysmith/taskdn"
keywords = ["tasks", "markdown", "frontmatter", "productivity"]
categories = ["parsing", "data-structures"]

[dependencies]
# Frontmatter parsing (includes yaml-rust2)
gray_matter = "0.3"
serde = { version = "1", features = ["derive"] }

# Utilities
thiserror = "1"
rayon = "1"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
