[package]
name = "taskdn"
version = "0.1.0"
edition = "2021"
description = "Rust library for parsing, querying, and manipulating Taskdn task files"
license = "MIT"
repository = "https://github.com/dannysmith/taskdn"
keywords = ["tasks", "markdown", "frontmatter", "productivity"]
categories = ["parsing", "data-structures"]

[features]
default = []
watch = ["dep:notify-debouncer-mini"]

[dependencies]
# Frontmatter parsing (includes yaml-rust2)
gray_matter = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Date/time handling
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Utilities
thiserror = "1"
rayon = "1"

# Optional: file watching (behind "watch" feature)
# Note: We only depend on notify-debouncer-mini, which brings in notify 7.x
notify-debouncer-mini = { version = "0.5", optional = true }

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
