[package]
name = "taskdn-napi"
version = "0.1.0"
edition = "2021"
authors = ["Danny Smith"]
description = "NAPI-RS bindings for the Taskdn Rust SDK"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
taskdn = { path = "../taskdn-rust" }
napi = { version = "3", default-features = false, features = ["napi9"] }
napi-derive = "3"
chrono = "0.4"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
