[package]
name = "tdn-core"
version = "0.1.0"
edition = "2024"
description = "Core library for Taskdn CLI"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS bindings
napi = { version = "3", features = ["napi9"] }
napi-derive = "3"

# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Frontmatter parsing
gray_matter = "0.2"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tempfile = "3"
